fix: add prevent default to click handler

--- a/pages/options.html
+++ b/pages/options.html
@@ -19,7 +19,7 @@
         </nav>
         <header></header>
         <main>
-            <div class="form">
+            <div id="main-form" class="form">
                 <form action="options.html" method="get" onsubmit="setNewConfig">
                     <labe class="fm-label" for="pom-time">Pomodoro Time:</labe>
                     <input id="pom-time" name="pom-time" type="number" value="30" min="1" default="30" /><br />
