--- a/pages/rest.html
+++ b/pages/rest.html
@@ -18,24 +18,26 @@
             </ul>
         </nav>
         <header></header>
-        <main>
-            <div id="timer">
-                <p id="clock"></p>
-            </div>
-            <div id="btns">
-                <button class="btn btn-start" id="startBtn">Start</button>
-                <button class="btn btn-stop" id="stopBtn">Stop</button>
-                <button class="btn btn-reset" id="resetBtn">Reset</button>
-            </div>
-            <div id="timer">
-                '<audio id="alarm">
-            <source
-              src="../_src/_audios/despertador-eletrônico.mp3"
-              type="audio/mp3"
-            />
-          </audio>
-            </div>
-        </main>
+        <div id="bg-config">
+            <main>
+                <div id="timer">
+                    <p id="clock"></p>
+                </div>
+                <div id="btns">
+                    <button class="btn btn-start" id="startBtn">Start</button>
+                    <button class="btn btn-stop" id="stopBtn">Stop</button>
+                    <button class="btn btn-reset" id="resetBtn">Reset</button>
+                </div>
+                <div id="timer">
+                    '<audio id="alarm">
+              <source
+                src="../assets/audios/despertador-eletrônico.mp3"
+                type="audio/mp3"
+              />
+            </audio>
+                </div>
+            </main>
+        </div>
     </div>
     <script type="module" src="../main.js"></script>
     <script>
