feat(main.scss): Font-size changed
Font-size changed to improve responsiveness

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Pomodoro App</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                     <button class="btn btn-reset" id="resetBtn">Reset</button>
                 </div>
                 <div id="timer">
-                    '<audio id="alarm">
+                    <audio id="alarm">
               <source
                 src="./assets/audios/despertador-eletrônico.mp3"
                 type="audio/mp3"
@@ -39,7 +39,7 @@
             </main>
         </div>
     </div>
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="./main.js"></script>
     <script>
         document.getElementById('pom').style =
             'border-top-left-radius: 30%;' +
